--- a/sources/CV_Elie.tex
+++ b/sources/CV_Elie.tex
@@ -3,7 +3,7 @@
 
 \begin{document}
 \header{Elie}{TOURNIER}
-       {Junior Software Programmer}
+       {Junior Software Engineer}
 
 \begin{aside}
   \section{About}
@@ -17,7 +17,7 @@
     \href{https://fr.linkedin.com/in/elietournier}{LinkedIn}
     \href{https://github.com/Hopetech}{GitHub}
   \section{Programming}
-   \includegraphics[scale=0.04]{Star.png} C/C++
+   	C/C++
     MATLAB 
     TCL
     LabVIEW
@@ -32,35 +32,29 @@
     Windows
   \section{Languages}
     French : Mother tongue
-    English : TOEIC 895/990
+    English : \href{http://www.ets.org/toeic}{TOEIC} 895/990
     Italian : Notions   
 \end{aside}
 
 \section{Interests}
 
-Programming, New technologies, Healthcare, Information Communication Technologies, Image processing, Teamwork, Communication, Android, Signal processing, IT security, Testing, Electronic.   
+Programming, Information Communication Technologies, Healthcare, Image processing, Android, Cryptography, Teamwork, Signal processing, Cyber security, Testing, Electronic, Communication.   
 
 \section{Experience}
 
 \begin{entrylist}
   \entry
     {09.2013 -}
-    {Thales Electron Devices, Moirans, FRANCE}
-    {Student engineer}
+    {\href{https://www.thalesgroup.com/en/microwave-imaging-sub-systems/radiology}{Thales Electron Devices}, Moirans, FRANCE}
+    {Student software engineer}
     {\emph{Programming of images quality characterization tools in C++. \\
 				Designing and programming, in TCL, automated tests for X-ray detectors.}}
    
    \entry
-    {08.2013}
-    {Swimming pool, Saint-Vallier, FRANCE}
-    {Lifeguard}
-    {\emph{Supervising the safety and rescue of swimmers.}}
-   
-   \entry
     {04-08.2013}
-    {LPSC, Grenoble, FRANCE}
+    {\href{http://lpsc.in2p3.fr/index.php/en/}{LPSC}, Grenoble, FRANCE}
     {Technician training}
-    {\emph{Designing and programming, in LabVIEW, of an optical polarimeter for the {\href{http://nedm.web.psi.ch/}{nEDM}} experiment.}}
+    {\emph{Designing and programming, in LabVIEW, of an optical polarimeter for the {\href{http://nedm.web.psi.ch/}{nEDM experiment}}.}}
    
    \entry
     {07-08.2012}
@@ -68,12 +62,12 @@ Programming, New technologies, Healthcare, Information Communication Technologie
     {Lifeguard}
     {\emph{Supervising the safety and rescue of swimmers \\
     			Animation of a group of children}}
-
+    			
    \entry
     {08.2011}
     {Leisure center, Faramans, FRANCE}
     {Lifeguard}
-    {\emph{Supervising the safety and rescue of swimmers \\
+    {\emph{Supervising the safety and rescue of kids \\
     			Animation of a group of children}}
    
    \entry
@@ -89,7 +83,7 @@ Programming, New technologies, Healthcare, Information Communication Technologie
 \begin{entrylist}
   \entry
     {2013–2016}
-    {Engineering school}
+    {\href{http://www.telecom-physique.fr}{Engineering school}}
     {Telecom Physiques Strasbourg, FRANCE}
     {Sandwich courses in Health ICT}
   \entry
@@ -99,23 +93,6 @@ Programming, New technologies, Healthcare, Information Communication Technologie
     {2-year course in Applied Physics and Measurement Processes – equivalent to a Higher National Diploma,\\
     			specialized in Instrumentation Techniques}
 \end{entrylist}
-
-\section{Applications}
-
-\begin{entrylist}
-  \entry
-    {2015}
-    {Eze2Chooz}
-    {\href{https://github.com/Hopetech/eze2chooz}{GitHub}}
-    {Android app allows you to choose between several possibilities.}
-   \entry
-    {2015}
-    {ProFamille}
-    {\href{http://profamille.fr/}{ProFamille}}
-    {Web app for ProFamille program.}
-\end{entrylist}
-
-\newpage
 
 \section{Activities}
 
@@ -140,11 +117,6 @@ Programming, New technologies, Healthcare, Information Communication Technologie
     {Swimming}
     {}
     {Between 4 to 8 km a week.}
-   \entry
-    {Sport}
-    {Bouldering}
-    {}
-    {Climbing once a week.}
    \entry
     {All the time}
     {Travels}
