Add Collabora experience

--- a/sources/CV_Elie.tex
+++ b/sources/CV_Elie.tex
@@ -3,7 +3,7 @@
 
 \begin{document}
 \header{Elie}{TOURNIER}
-       {Junior Software Engineer}
+       {\textbf{\color{white}OpenSource Software Engineer}}
 
 \begin{aside}
   \section{About}
@@ -13,22 +13,20 @@
     ~
     +33 6 37 41 44 96
     ~
-    \href{mailto:elietournier@hotmail.fr}{elietournier@hotmail.fr}
-    \href{https://fr.linkedin.com/in/elietournier}{LinkedIn}
-    \href{https://github.com/Hopetech}{GitHub}
+    \href{mailto:tournier.elie@gmail.com}{\textbf{tournier.elie@gmail.com}}
+    \href{https://fr.linkedin.com/in/elietournier}{linkedin.com/in/elietournier}
+    \href{https://github.com/Hopetech}{github.com/hopetech}
+     \href{https://gitlab.freedesktop.org/hopetech}{gitlab.freedesktop.org/hopetech}
   \section{Programming}
-   	C/C++
-    MATLAB 
+    C
+    C++
     TCL
-    LabVIEW
-    Android
-    node.js
+    MATLAB
     \LaTeX{} 
   \section{Revision control software}
     Git
-    SVN
   \section{Operating system}
-    Linux / Unix
+    Linux
     Windows
   \section{Languages}
     French : Mother tongue
@@ -38,44 +36,40 @@
 
 \section{Interests}
 
-Programming, Information Communication Technologies, Healthcare, Image processing, Android, Cryptography, Teamwork, Signal processing, Cyber security, Testing, Electronic, Communication.   
+\textbf{Open-source}, \textbf{Graphics}, Compile, Information Communication Technologies, Healthcare, Image processing, Testing.
 
 \section{Experience}
 
 \begin{entrylist}
   \entry
-    {09.2013 -}
+    {01.2017-Now}
+    {\href{https://www.collabora.com/}{Collabora}, Cambridge, UK}
+    {Graphics software engineer}
+    {\emph{ - Creating prototype of a trace testing \textbf{continuous integration} system for Mesa. Verifying the correctness of the image produce by the OpenGL driver. \\
+    			- Adding a new backend in Virgl3d, a virtual 3D GPU use inside QEMU virtual machines. Implementing \textbf{lowering passes}. Transcompiling Mesa internal IR to GLSL or ESSL.\\
+				- Adding double precision floating point support on GPU without hardware FPUs. Modifying the \textbf{Mesa compiler} to add new built-in functions.\\
+				- Reviewing code from different components of Mesa.\\
+				- Taking part of discussions the \textbf{Khronos OpenCL Tooling workgroup} to improve and upstream a SPIRV-LLVM IR translator to LLVM.}}
+
+  \entry
+    {05-09.2016}
+    {\href{https://summerofcode.withgoogle.com/}{Google Summer of Code}, Remote}
+    {Student software engineer}
+    {\emph{Creating a library to emulate \textbf{IEEE754} double precision floating point.}}
+
+  \entry
+    {2013-2016}
     {\href{https://www.thalesgroup.com/en/microwave-imaging-sub-systems/radiology}{Thales Electron Devices}, Moirans, FRANCE}
     {Student software engineer}
-    {\emph{Programming of images quality characterization tools in C++. \\
-				Designing and programming, in TCL, automated tests for X-ray detectors.}}
-   
+    {\emph{ - Programming of images quality characterization tools in \textbf{C++}. \\
+				- Designing and programming, in \textbf{TCL}, automated tests for X-ray detectors.}}
+
    \entry
     {04-08.2013}
     {\href{http://lpsc.in2p3.fr/index.php/en/}{LPSC}, Grenoble, FRANCE}
     {Technician training}
     {\emph{Designing and programming, in LabVIEW, of an optical polarimeter for the {\href{http://nedm.web.psi.ch/}{nEDM experiment}}.}}
-   
-   \entry
-    {07-08.2012}
-    {Leisure center, Porto-Vecchio, FRANCE}
-    {Lifeguard}
-    {\emph{Supervising the safety and rescue of swimmers \\
-    			Animation of a group of children}}
-    			
-   \entry
-    {08.2011}
-    {Leisure center, Faramans, FRANCE}
-    {Lifeguard}
-    {\emph{Supervising the safety and rescue of kids \\
-    			Animation of a group of children}}
-   
-   \entry
-    {02.2011}
-    {Fire station, Chambery, FRANCE}
-    {Lifeguard}
-    {\emph{Formation of lifeguard and first-aider with the firefighters.}}
-      
+
 \end{entrylist}
 
 \section{Higher Education}
@@ -84,7 +78,7 @@ Programming, Information Communication Technologies, Healthcare, Image processin
   \entry
     {2013–2016}
     {\href{http://www.telecom-physique.fr}{Engineering school}}
-    {Telecom Physiques Strasbourg, FRANCE}
+    {Telecom Physiques, Strasbourg, FRANCE}
     {Sandwich courses in Health ICT}
   \entry
     {2011–2013}
@@ -94,34 +88,26 @@ Programming, Information Communication Technologies, Healthcare, Image processin
     			specialized in Instrumentation Techniques}
 \end{entrylist}
 
-\section{Activities}
+\section{Presentation}
 
 \begin{entrylist}
   \entry
-    {2011}
-    {Driving}
-    {}
-    {Full clean driving license.}
+    {Feb. 2019}
+    {FOSDEM}
+    {Brussels, Belgium}
+    {What's new in the GPU virtual world?\\
+    Overview of the project and plans for the future.}
    \entry
-    {Voluntary}
-    {Mountain Biking}
-    {}
-    {Marshal for the 2014 MTB World Cup in Meribel, FRANCE.}
+    {Oct. 2018}
+    {X.Org Developer's Conference}
+    {A Coruña, Spain}
+    {What's new in the GPU virtual world?}
    \entry
-    {Sport}
-    {Mountain Biking}
-    {}
-    {Participated at the Avalanche Cup of Lyon, FRANCE.}
-   \entry
-    {Sport}
-    {Swimming}
-    {}
-    {Between 4 to 8 km a week.}
-   \entry
-    {All the time}
-    {Travels}
-    {}
-    {Travelling in many countries all around the world.}
+    {Sept. 2016}
+    {X.Org Developer's Conference}
+    {Helsinki, Finland}
+    {Implementation of a double floating point library in GLSL 1.30.\\
+    Presenting the status of the FP64 emulation library.}
 \end{entrylist}
 
 \end{document}
